modified web pages

--- a/StupidMart/templates/admin/userAdd.html
+++ b/StupidMart/templates/admin/userAdd.html
@@ -69,8 +69,8 @@
                     <label >用户性别：</label>
 
                     <select name="gender">
-                        <option value="man" v-model="user.gender">男</option>
-                        <option value="woman" v-model="user.gender">女</option>
+                        <option value="男" v-model="user.gender">男</option>
+                        <option value="女" v-model="user.gender">女</option>
                     </select>
                     <span></span>
                 </div>
