--- a/StupidMart/templates/public/index.html
+++ b/StupidMart/templates/public/index.html
@@ -12,7 +12,7 @@
     <h1>超市账单管理系统</h1>
 
     <div class="publicHeaderR">
-        <p><span>下午好！</span><span style="color: #fff21b">{{ current_user }}</span> , 欢迎你！</p>
+        <p><span>下午好！</span><span style="color: #fff21b"></span> 欢迎你！</p>
         <a href="/signin/">登入</a>
         <a href="/logout/">退出</a>
     </div>
