--- a/StupidMart/templates/public/public.html
+++ b/StupidMart/templates/public/public.html
@@ -10,7 +10,7 @@
     <header class="publicHeader">
         <h1>超市账单管理系统</h1>
         <div class="publicHeaderR">
-            <p><span>下午好！</span><span style="color: #fff21b">{{ current_user }}</span> , 欢迎你！</p>
+            <p><span>下午好！</span><span style="color: #fff21b"></span> , 欢迎你！</p>
             <a href="/logout/">退出</a>
         </div>
     </header>
